# python-plotly-graph

./: create_graphic.py  fake_users.json  generate_data.py  live_app.py  live_app2.py  live_graph.py  pyproject.toml
.github/workflows/: pylint.yml
