[tool.poetry]
name = "python-plotly-graph"
version = "0.2023.05.08"
description = ""
authors = ["Amal Khamidov <akoteykula@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
faker = "~18.7.0"
plotly = "~5.14.1"
pandas = "~2.0.1"
dash = "~2.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
